--- a/css/exhibitors.css
+++ b/css/exhibitors.css
@@ -205,7 +205,7 @@
 .event-title {
   font-family: "Inclusive Sans", sans-serif;
   font-size: 1.8rem;
-  color: #50006f;
+  color: black;
   line-height: 1.3;
   word-wrap: break-word; /* 允許長單詞換行 */
   overflow-wrap: break-word; /* 現代瀏覽器的換行屬性 */
@@ -214,7 +214,6 @@
   flex: 1; /* 佔據剩餘空間 */
   text-transform: uppercase;
   margin: 0;
-  margin-bottom: 0.5rem;
 }
 
 /* 描述區塊 */
@@ -225,7 +224,7 @@
 .event-description {
   font-family: "Inclusive Sans", sans-serif;
   font-size: 1rem;
-  color: #686868;
+  color: black;
   line-height: 1.6;
   text-align: left;
 }
@@ -234,10 +233,9 @@
 .event-signup-btn {
   display: inline-block;
   padding: 0.3rem 0.8rem;
-  background-color: darkolivegreen;
+  background-color: black;
   color: ghostwhite;
   text-decoration: none;
-  border-radius: 20px;
   font-size: 0.8rem;
   transition: background-color 0.3s ease;
   text-align: center;
@@ -246,7 +244,7 @@
 }
 
 .event-signup-btn:hover {
-  background-color: #3a0052;
+  background-color: green;
   color: white;
 }
 
