--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -1475,7 +1475,7 @@ p {
 
 .ticket-button {
   display: inline-block;
-  background-color: brown;
+  background-color: blue;
   color: var(--secondary-color);
   text-decoration: none;
   padding: 0rem 1rem;
@@ -1610,8 +1610,7 @@ p {
 
 /* 翻轉按鈕樣式 */
 .flip-button {
-  background: #0955cc;
-  border: none;
+  background: transparent;
   width: 60px;
   height: 60px;
   border-radius: 50%;
@@ -1624,7 +1623,7 @@ p {
   font-family: "Inclusive Sans", sans-serif;
   font-weight: 600;
   transition: all 0.3s ease;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  border: 2px dotted black;
 }
 
 .flip-text {
