--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -43,7 +43,7 @@
 
 .store-modal-body {
   padding: 0;
-  height: calc(100% - 80px);
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
